busstop component, design improvement

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,42 @@
 
-.App {
- 
-}
-
-
 body {
-  background: linear-gradient(180deg, rgba(6,74,108,1) 0%, rgba(179,184,195,1) 100%);
+  background-color: white;
   display: flex;
   height: 100vh;
+  width: 100vh;
+  
+}
+
+.bus{
+  text-align: center;
+  width: 100%; 
+ 
+}
+.bus h2{
+  margin-left: 50%;
+}
+.gif{
+  width: 200%;
+  
+}
+.mainPage{
+  position: absolute;
+  width: 100vh;
+  height: 100vh;
+  background-size: cover;
+}
+.backhome, .endroad{
+  margin: 20px;
+  border-radius: 10px; 
+
+}
+.backhome{
+  margin-left: 50%;
+}
+.icon{
+  
+  width: 40px;
+}
+.endroad{
+  font-size: 140%;
 }
