--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,53 @@
-body {
+/*body {
   background-color: white;
   display: flex;
   position: absolute;
   left: 0;
   right: 0;
+}*/
+
+body {
+  background: rgb(6,74,108);
+  background: linear-gradient(180deg, rgba(6,74,108,1) 0%, rgba(247,249,251,1) 49%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background-repeat: no-repeat;
+}
+
+.bosch {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff;
+  background-size: cover;
+  border-radius: 10px;
+  position: relative;
 }
 
 
 .boschLogo{
-  width: 50%;
+  /*width: 50%;
   align-content: center;
-  margin-left: 25%;
+  margin-left: 25%;*/
+  display: flex;
+  justify-content: center;
 }
+
 .Rainbow{
-  margin-left: 15%;
+  /*display: flex;
+  height: 100px;
+  border-radius: 10px;
+  /*margin-left: 15%;*/
+}
+
+header {
+  display: flex;
+  justify-content: center;
+
 }
 
 .botonInicio{
@@ -22,11 +56,12 @@ body {
   border-radius: 8px;
   padding: 5px;
   font-size: 30px;
-  width: 15%;
+  /*width: 15%;*/
   font-family: 'Alatsi', sans-serif;
   text-align: center;
   margin-left: 15%;
-
+  width: 150px;
+}
 
 
 .bus{
@@ -64,4 +99,10 @@ body {
 }
 .endroad{
   font-size: 140%;
+}
+
+.newStation {
+  display: flex;
+  justify-content: center;
+  margin-left: 48%;
 }
