--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,7 @@
 }*/
 
 body {
-  background: rgb(6,74,108);
-  background: linear-gradient(180deg, rgba(6,74,108,1) 0%, rgba(247,249,251,1) 49%);
+  background: rgb(255, 255, 255);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -51,7 +50,7 @@ header {
 }
 
 .botonInicio{
-  border:1px, rgb(10, 7, 7);
+  border:1px, rgba(3, 70, 255, 0.555);
   background: #ffffff;;
   border-radius: 8px;
   padding: 5px;
@@ -59,8 +58,8 @@ header {
   /*width: 15%;*/
   font-family: 'Alatsi', sans-serif;
   text-align: center;
-  margin-left: 15%;
-  width: 150px;
+  margin-left: 25%;
+  width: 200px;
 }
 
 
@@ -88,13 +87,18 @@ header {
 }
 .backhome{
   margin-right: 20%;
+  background: transparent;
+  border: transparent;
+  float:left;
 }
 .endroad{
   margin-left: 20%;
+ background: transparent;
+  border: transparent;
 }
 .icon{
   
-  width: 40px;
+  width: 20%;
 }
 .endroad{
   font-size: 140%;
@@ -104,4 +108,5 @@ header {
   display: flex;
   justify-content: center;
   margin-left: 48%;
+  
 }
