--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,3 @@
-/*body {
-  background-color: white;
-  display: flex;
-  position: absolute;
-  left: 0;
-  right: 0;
-}*/
-
 body {
   background: rgb(6,74,108);
   background: linear-gradient(180deg, rgba(6,74,108,1) 0%, rgba(247,249,251,1) 49%);
@@ -30,19 +22,11 @@ body {
 
 
 .boschLogo{
-  /*width: 50%;
-  align-content: center;
-  margin-left: 25%;*/
   display: flex;
   justify-content: center;
 }
 
-.Rainbow{
-  /*display: flex;
-  height: 100px;
-  border-radius: 10px;
-  /*margin-left: 15%;*/
-}
+
 
 header {
   display: flex;
@@ -56,7 +40,6 @@ header {
   border-radius: 8px;
   padding: 5px;
   font-size: 30px;
-  /*width: 15%;*/
   font-family: 'Alatsi', sans-serif;
   text-align: center;
   margin-left: 15%;
@@ -104,4 +87,26 @@ header {
   display: flex;
   justify-content: center;
   margin-left: 48%;
+}
+.QrReader{
+  width: 40%;
+  margin: 10%;
+  position: absolute;
+  left: 0%;
+  right: 0%;
+
+}
+.camera{
+  text-align: center;
+  align-content: center;
+  width: 80%;
+  margin-bottom: 15%;
+  
+}
+.camera p{
+  font-size: 150%;
+  position: absolute;
+  left: 0%;
+  right: 0%;
+ margin-bottom: 20%;
 }
