--- a/src/App.css
+++ b/src/App.css
@@ -65,7 +65,7 @@ header {
 
 .bus{
   text-align: center;
-  position: absolute;
+  position: relative;
   left: 0;
   right: 0;
 }
@@ -104,9 +104,17 @@ header {
   font-size: 140%;
 }
 
-.newStation {
-  display: flex;
-  justify-content: center;
-  margin-left: 48%;
-  
+button.newStation {
+  position: absolute;
+  top: 26%;
+  left: 42%;
+  padding: 54px;
+  cursor: pointer;
+  border-radius: 10px;
+  font-weight: bold;
+
+}
+
+button.newStation:hover {
+  background-color: yellowgreen;
 }
