--- a/src/App.css
+++ b/src/App.css
@@ -96,7 +96,7 @@ header {
 button.newStation {
   position: absolute;
   top: 26%;
-  left: 42%;
+  left: -11%;
   padding: 54px;
   cursor: pointer;
   border-radius: 10px;
@@ -106,6 +106,7 @@ button.newStation {
 
 button.newStation:hover {
   background-color: yellowgreen;
+}
 
 .newStation {
   display: flex;
