--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,13 @@ body {
   justify-content: center;
   height: 100vh;
   background-repeat: no-repeat;
+  
 }
+.arcoiris{
+  width: 100%;
+  
 
+}
 
 .Rainbow{
   background: none;
@@ -35,6 +40,7 @@ body {
 header {
   display: flex;
   justify-content: center;
+  width: 100vw;
 
 
 }
@@ -54,7 +60,7 @@ header {
 
 .bus{
   text-align: center;
-  position: relative;
+  
   left: 0;
   right: 0;
 }
@@ -70,8 +76,13 @@ header {
 }
 
 .backhome, .endroad{
-  margin: 20px;
+  margin: 30px;
   border-radius: 10px;
+  position: relative;
+  top:80%;
+  margin-right:10%;
+  
+
 
 }
 .backhome{
@@ -95,12 +106,12 @@ header {
 
 button.newStation {
   position: absolute;
-  top: 26%;
-  left: -11%;
-  padding: 54px;
-  cursor: pointer;
-  border-radius: 10px;
-  font-weight: bold;
+    top: 76%;
+    left: -15%;
+    padding: 2%;
+    cursor: pointer;
+    border-radius: 10px;
+    font-weight: bold;
 
 }
 
@@ -127,16 +138,17 @@ button.newStation:hover {
 }
 
 .botonInicio{
-  margin-left: 1000px;
+  margin-left: 50px;
 }
 
 
 .QrReader{
-  width: 40%;
+  width: 30%;
   margin: 10%;
   position: absolute;
-  left: 0%;
+  left: 25%;
   right: 0%;
+
 
 }
 .camera{
